<resources>
    <string name="app_name">AddProduct_Demo</string>
    <string name="title_activity_add_product">AddProduct</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="productID">Product ID</string>
    <string name="productName">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="maker">Maker</string>
    <string name="save_product">Save</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>